tests/ui/generics_with_bounds_and_where_clause.stderr
error[E0277]: the trait bound `MyStructBuilder<false, true, String>: HasReq1` is not satisfied
  --> tests/ui/generics_with_bounds_and_where_clause.rs:15:10
   |
15 |         .build();
   |          ^^^^^ the trait `HasReq1` is not implemented for `MyStructBuilder<false, true, String>`
   |
   = help: the trait `HasReq1` is implemented for `MyStructBuilder<true, P1, T>`
note: required by a bound in `MyStructBuilder::<P0, P1, T>::build`
  --> tests/ui/generics_with_bounds_and_where_clause.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<P0, P1, T>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
